--- a/package.json
+++ b/package.json
@@ -42,8 +42,9 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "serverless": "^2.29.0",
-    "serverless-finch": "^2.6.0",
+    "serverless": "^2.72.3",
+    "serverless-finch": "^2.8.0",
+    "serverless-single-page-app-plugin": "^1.0.4",
     "typescript": "~4.3.5",
     "yup": "^0.29.1"
   },
