--- a/serverless.yml
+++ b/serverless.yml
@@ -1,4 +1,4 @@
-service: node-in-aws-web
+service: shop-react-redux-cloudfront-2
 
 frameworkVersion: '2'
 
@@ -17,7 +17,7 @@ plugins:
 
 custom:
   client:
-    bucketName: node-in-aws-web-bucket
+    bucketName: shop-react-redux-cloudfront-23456
     distributionFolder: build
   s3BucketName: ${self:custom.client.bucketName}
 
